--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -17,21 +17,16 @@ import Layout from "../../layouts/Layout.astro";
               La conférence Angular à la française
             </h2>
             <p class="py-6 px-4 md:px-0">
-              Rejoignez-nous pour une expérience unique de conférence Angular en France !
-              Découvrez les dernières nouveautés en développement Angular, réseautez avec des experts
-              et d'autres développeurs.
+              Rejoignez-nous pour une expérience unique de conférence Angular en
+              France ! Découvrez les dernières nouveautés en développement
+              Angular, réseautez avec des experts et d'autres développeurs.
             </p>
-            <!--
-					<button class="btn btn-primary btn-outline text-2xl font-medium">Obtenir votre billet</button>
-					-->
 
             <p class="mt-4 text-2xl text-primary font-bold">24 mai 2025</p>
             <p class="mt-2 font-bold">Nantes, France</p>
           </div>
           <div class="flex-1 mt-8 mb-8 md:mb-0">
-            <h2 class="text-2xl md:text-3xl font-bold mb-8">
-              Billets
-            </h2>
+            <h2 class="text-2xl md:text-3xl font-bold mb-8">Billets</h2>
             <ul class="flex gap-4 items-stretch">
               <li
                 class="flex-1 card bg-base-200 shadow-xl border-2 border-primary"
@@ -40,11 +35,13 @@ import Layout from "../../layouts/Layout.astro";
                   <h3 class="card-title text-2xl text-center">Billet blind</h3>
                   <p>Quantité limitée</p>
                   <span class="text-3xl font-bold">25 €</span>
-                  <a
+                  <!-- <a
                     class="btn btn-primary"
+                    target="_blank"
                     href="https://www.helloasso.com/associations/angular-nexus/evenements/ng-baguette-conf-2025"
-                    target="_blank">Obtenir votre billet</a
-                  >
+                    >Obtenir votre billet</a
+                  > -->
+                  <p class="text-primary">Complet</p>
                   <p class="text-sm mt-2">25 billets disponibles</p>
                 </div>
               </li>
@@ -52,14 +49,16 @@ import Layout from "../../layouts/Layout.astro";
                 class="flex-1 card bg-base-200 shadow-xl border-2 border-primary"
               >
                 <div class="card-body flex flex-col items-center">
-                  <h3 class="card-title text-xl text-center">Billet Standard</h3>
+                  <h3 class="card-title text-xl text-center">
+                    Billet Standard
+                  </h3>
                   <p>Billet conférence classique</p>
                   <span class="text-3xl font-bold">30 €</span>
                   <p class="text-primary">Disponible fin mars</p>
                 </div>
               </li>
             </ul>
-            <div role="alert" class="alert mt-8">
+            <!-- <div role="alert" class="alert mt-8">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -81,7 +80,7 @@ import Layout from "../../layouts/Layout.astro";
                   target="_blank">Soumettez vos propositions de talk</a
                 >
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
