--- a/src/pages/en/speakers.astro
+++ b/src/pages/en/speakers.astro
@@ -56,7 +56,7 @@ const schema = {
       </section>
 
       <!-- <ul
-        class="flex flex-wrap justify-center gap-x-20 gap-y-8 mt-12 max-w-screen-lg m-auto"
+        class="flex flex-wrap justify-center max-w-screen-lg mt-12 gap-x-60 gap-y-20 px-8"
       >
         {
           speakers.map((speaker) => (
