feat: add speakers

--- a/src/pages/en/speakers.astro
+++ b/src/pages/en/speakers.astro
@@ -38,7 +38,7 @@ const schema = {
     <HeaderHero>
       <span slot="title">Speakers</span>
     </HeaderHero>
-    <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
+    <section class="max-w-screen-xl m-auto flex flex-col items-center px-8">
       <!-- <section class="flex flex-col items-center gap-4">
         <p class="text-center text-2xl font-bold">
           Our call for speakers is open until March 14th
@@ -48,31 +48,35 @@ const schema = {
           target="_blank"
           class="btn btn-primary">Submit your talk proposals</a
         >
-      </section> -->
+      </section> 
       <section class="flex flex-col items-center gap-4">
         <p class="text-center text-2xl font-bold">
           Call for speakers is closed. More information coming soon!
         </p>
       </section>
 
-      <!-- <ul
-        class="flex flex-wrap justify-center max-w-screen-lg mt-12 gap-x-60 gap-y-20 px-8"
+      -->
+
+      <ul
+        class="flex flex-wrap justify-center mt-12 gap-x-32 gap-y-20 px-8"
       >
         {
           speakers.map((speaker) => (
             <li>
+              <!--
               <a
                 href={getRelativeLocaleUrl(
                   Astro.currentLocale!,
                   "/speaker/" + speaker.slug
                 )}
               >
+                -->
                 <Speaker speaker={speaker.data} />
-              </a>
+              <!--</a> -->
             </li>
           ))
         }
-      </ul> -->
+      </ul>
     </section>
   </main>
 </Layout>
