--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -42,7 +42,6 @@ import Layout from "../../layouts/Layout.astro";
                     >Obtenir votre billet</a
                   > -->
                   <p class="text-primary">Complet</p>
-                  <p class="text-sm mt-2">25 billets disponibles</p>
                 </div>
               </li>
               <li
@@ -54,7 +53,12 @@ import Layout from "../../layouts/Layout.astro";
                   </h3>
                   <p>Billet conférence classique</p>
                   <span class="text-3xl font-bold">30 €</span>
-                  <p class="text-primary">Disponible fin mars</p>
+                    <a
+                    class="btn btn-primary"
+                    target="_blank"
+                    href="https://www.helloasso.com/associations/angular-nexus/evenements/ng-baguette-conf-2025"
+                    >Obtenir votre billet</a
+                  >
                 </div>
               </li>
             </ul>
