--- a/src/components/Speaker.astro
+++ b/src/components/Speaker.astro
@@ -9,15 +9,15 @@ export interface Props {
 const { speaker } = Astro.props;
 ---
 
-<figure class="avatar flex flex-col items-center gap-2 max-w-24">
+<figure class="avatar flex flex-col items-center gap-2 max-w-44">
   <div class="mask mask-squircle">
     {
       speaker.image && (
-        <Image height={64} width={64} src={speaker.image} alt="" />
+        <Image height={128} width={128} src={speaker.image} alt="" />
       )
     }
   </div>
-  <figcaption class="flex flex-col items-center">
-    <h2 class="text-3xl font-bold">{speaker.name}</h2>
+  <figcaption class="flex flex-col items-center mt-4">
+    <h2 class="text-3xl text-center font-bold">{speaker.name}</h2>
   </figcaption>
 </figure>
