--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -41,7 +41,6 @@ import Layout from "../../layouts/Layout.astro";
                     >Get your ticket</button
                   > -->
                   <p class="text-primary">Sold out</p>
-                  <p class="text-sm mt-2">limited to 25 first tickets</p>
                   <dialog id="ticket-modal" class="modal">
                     <div class="modal-box">
                       <h3 class="font-bold text-lg">Important Note</h3>
@@ -77,7 +76,11 @@ import Layout from "../../layouts/Layout.astro";
                   <h3 class="card-title text-xl text-center">Regular Ticket</h3>
                   <p>Standard conference ticket</p>
                   <span class="text-3xl font-bold">€30</span>
-                  <p class="text-primary">Unlocked late March</p>
+                   <button
+                    class="btn btn-primary"
+                    onclick="document.getElementById('ticket-modal').showModal()"
+                    >Get your ticket</button
+                  >
                 </div>
               </li>
             </ul>
